<resources>
    <string name="app_name">Jawwy</string>
    <string name="title_activity_trial">trialActivity</string>
    <string name="location">Location</string>
    <string name="unit">Unit</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="arabic">Arabic</string>
    <string name="tunit">Temperature</string>
    <string name="wunit">Wind Speed</string>
    <string name="meter_second">Meter/Second</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="location_switch">GPS       </string>
    <string name="seven_day_forecast">7-day forecast</string>
    <string name="pressure">Pressure</string>
    <string name="favourites">Favourites</string>
    <string name="alerts">Alerts</string>
    <string name="notification">Notification</string>
    <string name="window">Window</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="delete">Delete</string>
</resources>